// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Search is matches snapshot 1`] = `
<input id="Input"
       type="text"
       part="input"
>
<label for="Input"
       part="label"
>
  <slot name="label">
  </slot>
</label>
<slot name="prefix"
      part="prefix"
>
</slot>
<slot name="suffix"
      part="suffix"
>
</slot>
<slot name="menu"
      part="menu"
>
</slot>
`;

exports[`Input Search is matches snapshot when disabled 1`] = `
<input id="Input"
       type="text"
       part="input"
       disabled
>
<label for="Input"
       part="label"
>
  <slot name="label">
  </slot>
</label>
<slot name="prefix"
      part="prefix"
>
</slot>
<slot name="suffix"
      part="suffix"
>
</slot>
<slot name="menu"
      part="menu"
>
</slot>
`;

exports[`Input Search is matches snapshot when disabled toggled on/off 1`] = `
<input id="Input"
       type="text"
       part="input"
>
<label for="Input"
       part="label"
>
  <slot name="label">
  </slot>
</label>
<slot name="prefix"
      part="prefix"
>
</slot>
<slot name="suffix"
      part="suffix"
>
</slot>
<slot name="menu"
      part="menu"
>
</slot>
`;
